Fixed tags inside block in character sheet tabs not showing selected states and those blocks now shoing inline dice rolls. Made tags insideall blocks smaller. Added an editing state to editable blocks in character sheet stats. Made hit die equal to level inside characte sheet and split into 2 fields. Added "PB" as a recognised phrase for in-line dice rolls. Stat- subvalues now recognise + and - sums. Refined layout of blocks with a gap: value.

--- a/css/CharacterSheet.css
+++ b/css/CharacterSheet.css
@@ -21,6 +21,11 @@
     min-width: 820px;
 }
 
+.character-sheet-stats .editable:focus {
+    outline: 2px solid var(--gray-600);
+    border-radius: 6px;
+}
+
 .cs-panel {
     padding: 10px;
     color: var(--gray-900);
@@ -94,9 +99,17 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
+    align-items: center;
     align-content: center;
     margin: 0px 10px 0px 10px;
+    gap: 10px;
 }
+
+.current-stat-display .stat-value {
+    margin-left: 0;
+    margin-right: 0;
+}
+
 
 .stat-label {
     margin-bottom: 3px;
@@ -116,7 +129,6 @@
     font-size: 40px;
     font-weight: bold;
     min-width: 10px;
-    width: auto;
     text-align: center;
 }
 
